[package]
name = "blog"
version = "0.1.0"
authors = ["<Your username>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "blog"

[dependencies]
yew = "^0.17"
wasm-bindgen = "^0.2"
pulldown-cmark = "^0.7"
http = "^0.2"
anyhow = "^1.0"
rocket = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
yew-router = "^0.14"

[dependencies.rocket_contrib]
version = "^0.4"
features = ["serve"]

[dependencies.web-sys]
version = "*"
features = ["NodeList"]

[[bin]]
name = "server"

